Add Chinese (Simplified) and Japanese localization
Co-Authored-By: ShikiSuen <shikisuen@pm.me>

--- a/XcStringMerger/Sources/XcStringMerger/Resources/Localizable.xcstrings
+++ b/XcStringMerger/Sources/XcStringMerger/Resources/Localizable.xcstrings
@@ -4,6 +4,18 @@
     "Merge" : {
       "comment" : "Strategy",
       "localizations" : {
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "合併"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "合并"
+          }
+        },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
@@ -15,6 +27,18 @@
     "Merge translated" : {
       "comment" : "Strategy",
       "localizations" : {
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "翻訳済みだけを合併する"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "仅合并翻译完毕的"
+          }
+        },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
@@ -26,6 +50,18 @@
     "No such language: (code)" : {
       "comment" : "Error description",
       "localizations" : {
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "見つかぬ言語：(code)"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "无此语言：(code)"
+          }
+        },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
@@ -37,6 +73,18 @@
     "Replace" : {
       "comment" : "Strategy",
       "localizations" : {
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "置換"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "替换"
+          }
+        },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
